# bet365

./: Cargo.toml  Dockerfile  docker-compose-exported.yml  docker-compose.yml
rust_api/: .env  Cargo.toml  docker-compose.yml
rust_api/src/: live_example_simple.json  live_example_with_odds.json  main.rs
src/: discord_bot.rs  main.rs
websocket/: Cargo.toml
websocket/src/: main.rs
