[package]
name = "bet365-notificator"
version = "1.0.0"
edition = "2021"
authors = ["Aljaž Zupan <aljaz.zupan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
colored = "2.0.4"
datetime = "0.5.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.169", features = ['derive'] }
serde_json = "1.0.100"
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "http",
    "cache",
    "standard_framework",
] }
tokio = { version = "1.29.1", features = ["full"] }
