[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datetime = "0.5.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.169", features = ['derive'] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
